PAMF-759 fix plan template's lack of margin on mobile

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -648,7 +648,7 @@ i.cs-map-marker.A{
 #PlanTemplate,
 #transit.container{
   @media only screen and (max-device-width: 480px){
-    margin:0px -30px !important;
+    margin:0px -10px !important;
   }
 }
 
